--- a/backend/package.json
+++ b/backend/package.json
@@ -2,16 +2,15 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "Blog App Backend",
-    "main": "source/server.ts",
+    "main": "src/server.ts",
     "scripts": {
-        "build": "rm -rf build && prettier --write source/ && tsc",
-        "start": "nodemon source/server.ts"
+        "build": "rm -rf build && prettier --write src/ && tsc",
+        "start": "nodemon src/server.ts"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
-        "typescript": "^3.7.2",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "mongoose": "^6.3.0",
@@ -24,6 +23,7 @@
         "@types/mongoose": "^5.5.32",
         "@types/node": "^16.0.1",
         "cors": "^2.8.5",
-        "ts-node": "^10.0.0"
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.3"
     }
 }
