--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -13,5 +13,8 @@
       "editor.wordWrap": "on",
       "editor.renderWhitespace": "all",
       "editor.acceptSuggestionOnEnter": "off"
-    }
+    },
+    "cSpell.words": [
+      "Nafeo"
+    ]
   }
