--- a/backend/package.json
+++ b/backend/package.json
@@ -2,24 +2,35 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "Blog App Backend",
-    "main": "src/server.ts",
+    "main": "dist/index.ts",
     "scripts": {
-        "build": "rm -rf build && prettier --write src/ && tsc",
-        "start": "nodemon src/server.ts"
+        "build": "tsc && node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js",
+        "start:prod": "yarn build",
+        "start": "nodemon -e ts,js --exec ts-node -r tsconfig-paths/register ./src/index.ts"
     },
-    "author": "",
+    "author": "Nafeo",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.1",
+        "bcrypt-nodejs": "^0.0.3",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "crypto": "^1.0.1",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.3.0",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "tsconfig-paths": "^3.14.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/bcrypt-nodejs": "0.0.31",
+        "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.11",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.8",
+        "@types/jsonwebtoken": "^8.5.3",
         "@types/mongoose": "^5.5.32",
         "@types/node": "^16.0.1",
         "cors": "^2.8.5",
