--- a/blog-app/frontend/package.json
+++ b/blog-app/frontend/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "scope": "^0.10.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
