--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "lerna": "^4.0.0"
   },
   "scripts": {
-    "start": "lerna run start"
+    "start": "npx lerna run start --scope={backend,frontend}"
   }
 }
