--- a/blog-app/backend/package.json
+++ b/blog-app/backend/package.json
@@ -35,7 +35,16 @@
         "@types/jsonwebtoken": "^8.5.3",
         "@types/mongoose": "^5.5.32",
         "@types/node": "^16.0.1",
+        "@typescript-eslint/eslint-plugin": "^5.29.0",
+        "@typescript-eslint/parser": "^5.29.0",
         "cors": "^2.8.5",
+        "eslint": "^7.32.0 || ^8.2.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.1.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.7.1",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3"
     }
