--- a/blog-app/backend/tsconfig.json
+++ b/blog-app/backend/tsconfig.json
@@ -15,7 +15,7 @@
         "sourceMap": true /* Generates corresponding '.map' file. */,
         // "outFile": "./",                       /* Concatenate and emit output to single file. */
         "outDir": "build" /* Redirect output structure to the directory. */,
-        "rootDir": "src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+        "rootDir": ".",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
         // "composite": true,                     /* Enable project compilation */
         // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
         // "removeComments": true,                /* Do not emit comments to output. */
@@ -42,9 +42,9 @@
 
         /* Module Resolution Options */
         "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-        "baseUrl": "./src" /* Base directory to resolve non-absolute module names. */,
+        "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
         "paths": {
-            "@/*": ["*"]
+            "@src/*": ["src/*"]
         } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
         "rootDirs": ["src"],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
         "types": ["node"],                           /* Type declaration files to be included in compilation. */
