--- a/blog-app/backend/package.json
+++ b/blog-app/backend/package.json
@@ -32,6 +32,7 @@
         "@types/cors": "^2.8.11",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.8",
+        "@types/jest": "^28.1.3",
         "@types/jsonwebtoken": "^8.5.3",
         "@types/mongoose": "^5.5.32",
         "@types/node": "^16.0.1",
@@ -44,7 +45,9 @@
         "eslint-import-resolver-typescript": "^3.1.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-prettier": "^4.0.0",
+        "jest": "^28.1.1",
         "prettier": "^2.7.1",
+        "ts-jest": "^28.0.5",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3"
     }
