--- a/blog-app/backend/package.json
+++ b/blog-app/backend/package.json
@@ -1,54 +1,55 @@
 {
-    "name": "backend",
-    "version": "1.0.0",
-    "description": "Blog App Backend",
-    "main": "dist/server.ts",
-    "scripts": {
-        "start": "nodemon -r tsconfig-paths/register ./src/server.ts",
-        "build": "NODE_ENV=prod tsc && node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js",
-        "prod": "yarn build",
-        "dev": "nodemon -r tsconfig-paths/register ./src/server.ts"
-    },
-    "author": "Nafeo",
-    "license": "ISC",
-    "dependencies": {
-        "bcrypt": "^5.0.1",
-        "bcrypt-nodejs": "^0.0.3",
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.19.0",
-        "crypto": "^1.0.1",
-        "dotenv": "^16.0.0",
-        "express": "^4.17.3",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.3.0",
-        "nodemon": "^2.0.15",
-        "scope": "^0.10.1",
-        "tsconfig-paths": "^3.14.1"
-    },
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
-        "@types/bcrypt-nodejs": "0.0.31",
-        "@types/bcryptjs": "^2.4.2",
-        "@types/cors": "^2.8.11",
-        "@types/dotenv": "^8.2.0",
-        "@types/express": "^4.17.8",
-        "@types/jest": "^28.1.3",
-        "@types/jsonwebtoken": "^8.5.3",
-        "@types/mongoose": "^5.5.32",
-        "@types/node": "^16.0.1",
-        "@typescript-eslint/eslint-plugin": "^5.29.0",
-        "@typescript-eslint/parser": "^5.29.0",
-        "cors": "^2.8.5",
-        "eslint": "^7.32.0 || ^8.2.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-import-resolver-typescript": "^3.1.0",
-        "eslint-plugin-import": "^2.25.2",
-        "eslint-plugin-prettier": "^4.0.0",
-        "jest": "^28.1.1",
-        "prettier": "^2.7.1",
-        "ts-jest": "^28.0.5",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.6.3"
-    }
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "Blog App Backend",
+  "main": "dist/server.ts",
+  "scripts": {
+    "start": "nodemon -r tsconfig-paths/register ./src/server.ts",
+    "build": "NODE_ENV=prod tsc && node -r ts-node/register/transpile-only -r tsconfig-paths/register build/server.js",
+    "prod": "tsc -p tsconfig.prod.json yarn build",
+    "test": "jest",
+    "dev": "nodemon -r tsconfig-paths/register ./src/server.ts"
+  },
+  "author": "Nafeo",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcrypt-nodejs": "^0.0.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.0",
+    "nodemon": "^2.0.15",
+    "scope": "^0.10.1",
+    "tsconfig-paths": "^3.14.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcrypt-nodejs": "0.0.31",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.11",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.8",
+    "@types/jest": "^28.1.3",
+    "@types/jsonwebtoken": "^8.5.3",
+    "@types/mongoose": "^5.5.32",
+    "@types/node": "^16.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "cors": "^2.8.5",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.1.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.1",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  }
 }
